tests/error/empty_for.gw
#! [contains] empty for loop condition
<<< "test" >>>;
for(int i;;){}
